--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">layouts</string>
+    <string name="button">Button</string>
+    <string name="Image">Image</string>
 </resources>
